--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
   
   <head>
+    <meta charset="utf-8">
+    <meta name="theme-color" content="white">
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/helllo-icon-152.png">
+    <meta name="viewport" content="width=device-width", inital-scale=1>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-wen-app-title" content="Hello World">
+    <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
   </head>
   
   <body class ="fullscreen">
