--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
   </head>
   
-  <body class ="fullscreen">
+  <body class ="fullscreen" onload="regSW();">
     <div class="container">
       <h1 class="title"> Hello World</h1>
     </div>
+    <script src="js/main.js"></script>
   </body>
   
 </html>
