--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
   
   <body class ="fullscreen" onload="regSW();">
     <div class="container">
-      <h1 class="title"> Hello World</h1>
+      <h1 class="title"> Welcome to my website!</h1>
+      <br>
+      <a href="HTML.html">
+         <button class="block"><b>HTML</b></button>
+      </a>
+      <br>
     </div>
+
     <script src="js/main.js"></script>
   </body>
   
