--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container">
       <h1 class="title"> Welcome to my website!</h1>
       <br>
-      <a href="HTML.html">
-         <button class="block"><b>HTML</b></button>
+      <a href="secondPage.html">
+         <button class="block"><b>Second Page</b></button>
       </a>
       <br>
     </div>
