--- a/secondPage.html
+++ b/secondPage.html
@@ -31,7 +31,7 @@
          <button class="block"><b>Previous</b></button>
       </a>
       <br>
-      <img src="https://ik.imagekit.io/ikmedia/women-dress-2.jpg"  width="400" height="500" />
+      <img src="images/earth.png"  width="400" height="500" />
     </div>
 
     <script src="js/main.js"></script>
