--- a/secondPage.html
+++ b/secondPage.html
@@ -31,7 +31,7 @@
          <button class="block"><b>Previous</b></button>
       </a>
       <br>
-      <img src="earth.png"/>
+      <img src="/earth.png"/>
     </div>
 
     <script src="js/main.js"></script>
