--- a/secondPage.html
+++ b/secondPage.html
@@ -31,7 +31,7 @@
          <button class="block"><b>Previous</b></button>
       </a>
       <br>
-      <img src="earth.png" alt="eaeth img" style="width: 55vw; min-width: 330px;"/>
+      <img src="earth.png" alt="earth img" width="500" height= "600"/>
     </div>
 
     <script src="js/main.js"></script>
